sg.tf
resource "aws_security_group" "tf-devops" {
  name        = "tf-devops"
  description = "ALL RULES"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "80 port"
    from_port = "80"
    to_port = "80"
    protocol = "tcp"
    cidr_blocks = "[0.0.0.0/0]"
  }
    ingress {
    description      = "mysql rule"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
